--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
     "axios": "1.12.2",
     "expo": "^54.0.0",
     "expo-auth-session": "~7.0.8",
+    "expo-camera": "~17.0.9",
     "expo-checkbox": "5.0.7",
     "expo-clipboard": "8.0.7",
     "expo-document-picker": "14.0.7",
-    "expo-image-picker": "17.0.8",
+    "expo-image-picker": "~17.0.8",
     "expo-linear-gradient": "15.0.7",
     "expo-location": "~19.0.7",
+    "expo-notifications": "~0.32.12",
     "expo-status-bar": "3.0.8",
     "expo-web-browser": "~15.0.8",
     "i18n-js": "4.5.1",
@@ -35,6 +37,7 @@
     "react-dom": "19.1.0",
     "react-native": "0.81.4",
     "react-native-gesture-handler": "2.28.0",
+    "react-native-image-crop-tools": "^1.6.4",
     "react-native-localize": "3.5.2",
     "react-native-maps": "1.20.1",
     "react-native-reanimated": "~4.1.1",
@@ -43,6 +46,7 @@
     "react-native-svg": "15.12.1",
     "react-native-url-polyfill": "2.0.0",
     "react-native-vector-icons": "10.2.0",
+    "react-native-vision-camera": "^4.7.2",
     "react-native-web": "0.21.0",
     "react-native-webview": "13.15.0",
     "react-native-worklets": "^0.5.1",
